...
        value={search}
        onChangeText={text => {
          setSearch(text);
        }}
        placeholder={t('searchPlaceholder')}
        style={styles.input}
        testID="search-input"
      />
      <Text style={styles.centered}>
        {t('showing')} {bookStats.filtered} {t('of')} {bookStats.total}{' '}
        {t('books')} | ❤️ {bookStats.favorites} {t('favorites')}
      </Text>
      <View style={styles.sortContainer}>
...
