appId: com.performanceworkshops
---
- launchApp
- assertVisible: "Login"
- tapOn: "Login"
- assertVisible: "Books"
- tapOn:
    id: "search-input"
- inputText: "of a young"
- assertVisible: "The Diary of a Young Girl"
- swipe:
    direction: UP
    duration: 10
- swipe:
    direction: UP
    duration: 10